fixed spacing on detail pricing section

--- a/CSS/services.css
+++ b/CSS/services.css
@@ -113,4 +113,16 @@ p {
     padding: 0;
   }
 
+  .exterior-items {
+    padding-right: 0;
+    margin-right: 20px;
+  }
+
+  li {
+    margin-right: 20px;
+  }
+
+  .detail-pricing-section {
+    width: 90%;
+  }
 }
